2008-06-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Fix for problem when re-sorting (keep selection visible)

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con.h:
	Remote connection GUI: support for SSH+WebDAV in remote connection dlg

	* src/gnome-cmd-con-dialog.cc:
	Set default method to CON_SSH for new connections

2008-06-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Use current column sorting in advrename

2008-06-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Simplified code for "file.sendto" user action

	* src/gnome-cmd-user-actions.cc:
	Added copying selected URIs to clipboard with ALT+click on toolbar button

2008-06-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Build fix for g++ 4.3

2008-06-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added support for user defined shortcuts to arbitrary programs,
	available as "command.execute" user action

2008-06-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data:
	Add GNOME Commander ftp site to remote servers for the first-time users

2008-06-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-prepare-xfer-dialog.cc:
	Yet another fix for full file path handling while copying/moving to the mounted devices

2008-06-05  Maciej Piechotka  <uzytkownik2@gmail.com>

	* src/gnome-cmd-main-menu.cc:
	"S_ynchonize Directories" -> "S_ynchronize Directories" (problem #536705)

2008-06-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-search-dialog.cc:
	Revamped 'Search...' dlg

2008-06-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h:
	* src/gnome-cmd-con.h:
	Removed superfluous alias from GnomeCmdConFtp object

	* src/gnome-cmd-data.cc:
	Simplify code for connections loading from cfg
