@@ -10,6 +10,7 @@ Bug fixes:
 New features:
  * User defined shortcuts to arbitrary programs
  * Copying selected URIs to clipboard with ALT+click on toolbar button
+ * Revamped search dialog
  * Updated help docs
  * New or updated translations: cs, de, es, fr, pl
  * New key bindings:
