@@ -1,3 +1,8 @@
+2008-06-23  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-search-dialog.cc:
+	File search: added radio buttons for controlling file name matching mode (regex/shell)
+
 2008-06-17  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-file-list.cc:
